--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vcmi (1.7.2) jammy; urgency=medium
+
+  * New upstream release
+
+ -- Ivan Savenko <saven.ivan@gmail.com>  Fri, 6 Feb 2025 12:00:00 +0200
+
 vcmi (1.7.1) jammy; urgency=medium
 
   * New upstream release
